--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
     <button id="9">9</button>
     <button id="0">0</button>
     </div>
-<div>
-    <button id="equal">=</button>
-    <button id="clear">C</button>
+
+<div class="button-operator">
     <button id="add">+</button>
     <button id="sub">-</button>
     <button id="div">/</button>
     <button id="mul">*</button>
-   
+    
 </div>
+    <button id="equal">=</button>
+    <button id="clear">C</button>
    
     <script src="script.js" defer></script>
 </body>
