--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
     <input type="text"  id="display" readonly>
 <div class="button-container">
     <button id="1">1</button>
@@ -29,7 +30,7 @@
 </div>
     <button id="equal">=</button>
     <button id="clear">C</button>
-   
+</div>
     <script src="script.js" defer></script>
 </body>
 </html>
