Fixing the error of deletition of zero if it is the first input number and added the feature such as delete button, dot button, handling the error if divide by 0

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <button id="8">8</button>
     <button id="9">9</button>
     <button id="0">0</button>
+    <button id=".">.</button>
+ 
     </div>
 
 <div class="button-operator">
@@ -28,6 +30,7 @@
     <button id="mul">*</button>
     
 </div>
+    <button id="delete">DEL</button>
     <button id="equal">=</button>
     <button id="clear">C</button>
 </div>
