--- a/index.html
+++ b/index.html
@@ -4,36 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-    <input type="text"  id="display" readonly>
-<div class="button-container">
-    <button id="1">1</button>
-    <button id="2">2</button>
-    <button id="3">3</button>
-    <button id="4">4</button>
-    <button id="5">5</button>
-    <button id="6">6</button>
-    <button id="7">7</button>
-    <button id="8">8</button>
-    <button id="9">9</button>
-    <button id="0">0</button>
-    <button id=".">.</button>
- 
+
+        <div id="input-container">
+            <input type="text"  id="display" readonly>
+        </div>
+
+<div class="buttons-and-functions-container">
+
+    <div class="number-button-and-function-button-container">
+              <div class="function-container">
+                    <button id="clear">C</button>
+                    <button id="delete">DEL</button>
+            </div>
+                <div class="button-container">
+                  <div class="number-button-column">
+                    <button id="1">1</button>
+                    <button id="2">2</button>
+                    <button id="3">3</button>
+                </div>
+                  <div class="number-button-column">
+                    <button id="4">4</button>
+                    <button id="5">5</button>
+                    <button id="6">6</button>
+                </div>
+                  <div class="number-button-column">
+                    <button id="7">7</button>
+                    <button id="8">8</button>
+                    <button id="9">9</button>
+                </div>
+                  <div class="number-button-column">
+                    <button id="0" class="special-case-button">0</button>
+                    <button id=".">.</button>
+                </div>    
+           </div>
     </div>
 
-<div class="button-operator">
-    <button id="add">+</button>
-    <button id="sub">-</button>
-    <button id="div">/</button>
-    <button id="mul">*</button>
-    
-</div>
-    <button id="delete">DEL</button>
-    <button id="equal">=</button>
-    <button id="clear">C</button>
-</div>
+
+            <div class="operator-button-and-equal-button-container">
+                <div class="button-operator">
+                    <button id="add">+</button>
+                    <button id="sub">-</button>
+                    <button id="div">/</button>
+                    <button id="mul">*</button>
+              </div>
+                <div class="equal-button-container">
+                    <button id="equal">=</button>
+                </div>
+            </div>
+
+ </div>              
+       
+    </div>
     <script src="script.js" defer></script>
 </body>
 </html>
